newclay/test/Compiler/Propagation/Fail/BindingUnboundPattern/main.clay
define foo;
overload foo(x:'T) {
    var y:'U = x;
    return y;
}

define main;
overload main() {
    var x:Int = 5;
    var y:Bool = foo(true);
    return x, y;
}

